# tbl

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
docs/: README.md  api.md  architecture.md  configuration.md  installation.md
openspec/: project.md
openspec/changes/archive/2025-12-18-add-verbose-output-and-stop-command/: proposal.md  tasks.md
openspec/changes/archive/2025-12-18-add-verbose-output-and-stop-command/specs/daemon-lifecycle/: spec.md
openspec/changes/archive/2025-12-18-implement-tbl-server/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-18-implement-tbl-server/specs/auth-security/: spec.md
openspec/changes/archive/2025-12-18-implement-tbl-server/specs/config-management/: spec.md
openspec/changes/archive/2025-12-18-implement-tbl-server/specs/core-server/: spec.md
openspec/changes/archive/2025-12-18-implement-tbl-server/specs/daemon-lifecycle/: spec.md
openspec/changes/archive/2025-12-18-implement-tbl-server/specs/git-integration/: spec.md
openspec/specs/auth-security/: spec.md
openspec/specs/config-management/: spec.md
openspec/specs/core-server/: spec.md
openspec/specs/daemon-lifecycle/: spec.md
openspec/specs/git-integration/: spec.md
src/: main.rs
