[package]
name = "tbl"
version = "0.1.0"
edition = "2021"
description = "Tiny self-bootstrapping web launcher"
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["fs"] }
webbrowser = "1.0"

[profile.release]
lto = true
strip = true
opt-level = "z"

